Fix overflow in reset.css

--- a/css/reset.css
+++ b/css/reset.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 
 body, html {
     height: 100%;
+    overflow: hidden;
 }
 
 body {
@@ -59,5 +60,6 @@ table {
 @media screen and (max-width: 1023.98px) {
     body, html {
         height: auto;
+        overflow: auto;
     }
 }
